# ragchatbot

./: .env.example  .flake8  .gitignore  CLAUDE.md  CODE_QUALITY.md  DEDUPLICATION_FIX.md  DIAGNOSTIC_SUMMARY.md  MULTI_ROUND_TOOLS_IMPLEMENTATION.md  README.md  frontend-changes.md  pyproject.toml
.claude/: settings.local.json
backend/: ai_generator.py  app.py  config.py  rag_system.py  search_tools.py  vector_store.py
backend/tests/: TEST_RESULTS_AND_FIXES.md  conftest.py  test_ai_generator.py  test_api_endpoints.py  test_course_search_tool.py  test_deduplication.py  test_document_loading.py  test_multi_round_tools.py  test_rag_integration.py  test_real_system.py
frontend/: index.html  script.js  style.css
scripts/: README.md  format.bat  format.sh  lint.bat  lint.sh  quality-check.bat  quality-check.sh
